--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "react-native-bluetooth-myvision",
-  "version": "1.0.0-rc1",
+  "version": "0.0.1",
   "description": "'Bluetooth serial for react native'",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sinistroxtreme/react-native-bluetooth-serial.git"
-  },
+  "repository": "git+https://github.com/sinistroxtreme/react-native-bluetooth-serial.git",
   "keywords": [
     "bluetooth",
     "react-native"
