--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/sinistroxtreme/react-native-bluetooth-mv#readme",
   "dependencies": {
-    "buffer": "^4.6.0"
+    "buffer": "^4.6.0",
+    "react-native-bluetooth-mv": "^1.0.3"
   },
   "peerDependencies": {
     "react-native": ">=0.40"
